--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db-data:/var/lib/mysql
 
   web:
-    image: ${DISTRO}:${TAG}
+    image: ${DISTRO}:${VERSION}
     depends_on:
       - db
     environment:
